objects/Employee__c.object
<CustomObject>
    <description>It is employee object to store records of employee</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Here is address of  Employee</description>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Here is age of  Employee</description>
        <formula>YEAR(TODAY())- YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <description>Here isAnnual CTC of  Employee</description>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Here is City of  Employee</description>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>it is check box for employee</description>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Here isDOB of  Employee</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <description>Here is date of joining of  Employee</description>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Here is department of employee in which he work</description>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>EMPLOYEEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Education of employee</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bsc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Msc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>here is employee id</description>
        <displayFormat>EMP-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of employee</description>
        <label>First Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Computed from First Name and Last Name fields</description>
        <formula>First_Name__c  &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If employee is active or not</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_on_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <description>id employee is under notice period or not</description>
        <label>Is on Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>here is last name of employee</description>
        <label>Last Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <description>here is last worked day of employee</description>
        <formula>Resignation_Date__c  + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>here manager field</description>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Details_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>here is project details</description>
        <label>Project Details</label>
        <referenceTo>Project_Details__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <description>here is resignation of employee</description>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>here is reference to role object</description>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <description>It is SSN number for employee</description>
        <label>SSN Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <description>SUM(Gross Salary)
salary credited till date</description>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary_Details__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary_Details__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>it is list of skills for employee</description>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>state of employee</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Here is status of employee</description>
        <formula>IF(
  Is_Active__c == TRUE ,
  IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;Employee is active.&quot; ) ,  
  IF( 
     Is_on_Notice_Period__c  == TRUE, 
    IMAGE( &quot;/img/samples/flag_yellow.gif&quot;,&quot;Employee is currently on notice period.&quot;)  , 
    IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;Employee is currently inactive.&quot;)  
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street of employee address</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_for_role__c</fullName>
        <description>here is value for role id which will be stored in this field</description>
        <label>Unique for role</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>here is zip code of employee</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All_Employees_on_Notice_Period</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Department__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_on_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Employees on Notice Period</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Employees</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Manager__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Resignation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Employees</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <recordTypes>
        <fullName>EXperienced</fullName>
        <active>true</active>
        <label>Experienced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nontechnical_Employee</fullName>
        <active>true</active>
        <description>It is the table of Nontechnical Employee</description>
        <label>Nontechnical Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Employee</fullName>
        <active>true</active>
        <description>It is the table of Technical Employee</description>
        <label>Technical Employee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Age_Between_21_to_30</fullName>
        <active>true</active>
        <description>here is rule to check if employee Age is Between 21 to 30</description>
        <errorConditionFormula>Age__c &lt;21 ||  Age__c &gt; 30</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Employee Age should be Between 21 to 30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOB</fullName>
        <active>true</active>
        <description>it date of birth rule to check if employee&apos;s age is greater than 18 or not</description>
        <errorConditionFormula>IF(YEAR( TODAY() ) - YEAR(Date_of_Birth__c )&lt;18,TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>1. Please provide a valid Date of birth. Employee cannot be less than 18 years of Age.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Notice_Period</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(  Is_on_Notice_Period__c == TRUE,  LEN( TEXT( Resignation_Date__c )) == 0), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>You should enter resignation date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_number</fullName>
        <active>true</active>
        <description>here is rule for SSN number limit size to 10</description>
        <errorConditionFormula>LEN(TEXT( SSN_Number__c ) )&gt;10</errorConditionFormula>
        <errorDisplayField>SSN_Number__c</errorDisplayField>
        <errorMessage>SSN number size should not be greater than 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Working_Date</fullName>
        <active>true</active>
        <description>Last working date should be greater than joining date</description>
        <errorConditionFormula>Resignation_Date__c &lt; Date_of_Joining__c</errorConditionFormula>
        <errorDisplayField>Date_of_Joining__c</errorDisplayField>
        <errorMessage>Last working date should be greater than joining date.</errorMessage>
    </validationRules>
</CustomObject>